refactor: 框架过度设计审查与重构 (15 tasks)
P0 逻辑漏洞修复:
- MemoryExtension.pending: ArrayList → synchronizedList 修复线程安全
- BashTool: 传递 ctx.signal() 修复 abort 无法终止 shell 命令
- AgentContext.messages(): 标记 @Deprecated, 推广 messagesSnapshot()

P1 死代码清理:
- 删除 ToolRenderer/ToolInfo/ToolSource/ExtensionLoader 死代码
- 清理 HookTypes 中未使用的 InjectMessage/NoOp 变体
- 标记 companion/skill.evolution/retrieval/memory/observability 为可选模块
- @Deprecated 标记未使用的 resource loaders

P2 结构简化:
- ThinkingLevel 枚举从 AgentContext 提取至 model/ 包
- AgentLoopConfig: MessageDrainer→Supplier, AuthResolver→Function (保留 @Deprecated 桥接)
- AgentLoopConfig.Builder: 删除拷贝构造函数, 引入 toBuilder()
- MemoryStore: CompletableFuture 异步接口改为同步
- Agent: 提取 AgentEventDispatcher, 添加 AgentEnd 重复事件防护