@@ -7,13 +7,11 @@ import io.agentcore.model.Content;
 import io.agentcore.model.Message;
 import io.agentcore.model.Message.UserMessage;
 import io.agentcore.extensions.Extension;
-import io.agentcore.llm.LlmMessageUtils;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.*;
-import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
  * Extension that persists user messages and recalls relevant memory.
@@ -28,7 +26,7 @@ public class MemoryExtension implements Extension {
     private final MemoryStore store;
     private final String sessionId;
     private final int topK;
-    private final List<String> pending = new ArrayList<>();
+    private final List<String> pending = Collections.synchronizedList(new ArrayList<>());
 
     public MemoryExtension(MemoryStore store, String sessionId) {
         this(store, sessionId, 5);
@@ -59,48 +57,23 @@ public class MemoryExtension implements Extension {
             }
             if (textParts.isEmpty()) return;
 
-            pending.add(String.join("\n", textParts));
-            if (pending.size() > MAX_PENDING) {
-                pending.remove(0);
+            synchronized (pending) {
+                pending.add(String.join("\n", textParts));
+                if (pending.size() > MAX_PENDING) {
+                    pending.removeFirst();
+                }
             }
         } else if (event instanceof TurnEnd) {
             if (sessionId == null || pending.isEmpty()) return;
 
             for (String text : pending) {
                 try {
-                    store.remember(sessionId, text, null).join();
+                    store.remember(sessionId, text, null);
                 } catch (Exception e) {
                     log.warn("memory remember failed for session {}: {}", sessionId, e.getMessage());
                 }
             }
             pending.clear();
         }
-    }
-
-    @Override
-    public List<Map<String, Object>> transformContext(
-            List<Map<String, Object>> llmMessages, AtomicBoolean signal) {
-        if (sessionId == null) return llmMessages;
-
-        String queryText = LlmMessageUtils.latestUserText(llmMessages);
-        if (queryText == null || queryText.isEmpty()) return llmMessages;
-
-        List<MemoryRecord> records;
-        try {
-            records = store.recall(sessionId, queryText, topK).join();
-        } catch (Exception e) {
-            log.warn("memory recall failed for session {}: {}", sessionId, e.getMessage());
-            return llmMessages;
-        }
-
-        if (signal != null && signal.get()) return llmMessages;
-        if (records == null || records.isEmpty()) return llmMessages;
-
-        StringBuilder body = new StringBuilder("Recalled memory for this session:");
-        for (int i = 0; i < records.size(); i++) {
-            body.append("\n[").append(i + 1).append("] ").append(records.get(i).text());
-        }
-
-        return LlmMessageUtils.injectSystemMessageAtLatestUser(llmMessages, body.toString());
     }
 }
